<resources>
    <string name="app_name">Wally</string>

    <!--Menu nosaukumi-->
    <string name="itemHome_text">Home</string>
    <string name="itemImage_text">Images</string>
    <string name="itemProfile_text">Profile</string>

    <!--Login/Register screen-->
    <string name="hint_email">email@example.com</string>
    <string name="hint_password">password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_registerClick">Don\'t have account? Click here</string>
    <string name="text_loginClick">Already have account? Click here</string>
    <string name="hint_displayName">display name</string>

    <!--Drawer menu-->
    <string name="text_userImages">Your Images</string>
    <string name="text_profile">Profile</string>
    <string name="text_logout">Logout</string>

    <!--UserImages screen-->
    <string name="text_takePicture">Take Picture</string>
    <string name="text_uploadPicture">Upload Picture</string>
    <string name="hint_title">Enter title</string>
    <string name="hint_extra_bio">Enter extra bio here</string>
    <string name="ok">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>

    <!--Profile screen-->
    <string name="nickname">Name:</string>
    <string name="hint_nickname">display name</string>
    <string name="email">Email:</string>
    <string name="hint_email_profile">email@example.com</string>
    <string name="new_password">New Pass:</string>
    <string name="hint_new_password">password</string>
    <string name="update">Update</string>
    <string name="back">Back</string>



</resources>
