<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView_edit"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:layout_margin="2dp"
        android:contentDescription="@string/app_name" />


    <LinearLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_edit"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/remove_edit"
            android:text="@string/remove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>